--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>To Do App</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html { width: 100%; }
+    body { width: 70%; margin: auto; margin-top: 3rem; }
+    .column { float: left; margin: 0 5% 1rem 5%; }
+    .width-6 { width: 40%; }
+    .width-12 { width: 90%; }
+    .centered { margin: auto; }
+    ul { list-style-type: none; }
+    form { width: 100%; }
+    input { width: auto; }
+    input[type="text"] { width: 80%; }
+    button.delete-this { float: right; margin-top: 1px; }
+    button { padding: 0px 3px 3px 3px; }
+
+    textarea { width: 100%; height: 10rem; }
+    #gets-rendered-here {
+      font-family: monospace;
+    }
+    #gets-rendered-here div {
+      border: 1px solid #ccc;
+      display: table;
+      width: auto;
+      padding: 0.1rem 0.3rem 0.1rem 0.3rem;
+    }
+  </style>
 </head>
 <body>
   <section id='body'>
