Add new item form field and 'clear completed' button.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     .width-6 { width: 40%; }
     .width-12 { width: 90%; }
     .centered { margin: auto; }
+    .right { float: right; }
+    .left { float: left; }
     ul { list-style-type: none; }
     form { width: 100%; }
     input { width: auto; }
     input[type="text"] { width: 80%; }
+    form input[type="text"] { width: 100%; }
+    form input[type="submit"] { display: none; }
     button.delete-this { float: right; margin-top: 1px; }
     button { padding: 0px 3px 3px 3px; }
 
