Change name to Concise.js. Start implementing DomMaintainer for keep-alive.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <script src="/node_modules/microevent/microevent.js"></script>
   <script src="/crosstalk.js"></script>
-  <script src="/annular.js"></script>
+  <script src="/concise.js"></script>
   <script src="/to-do.js"></script>
 </body>
 </html>
