Fix bugs from having renamed things.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <script src="/node_modules/microevent/microevent.js"></script>
-  <script src="/crosstalk.js"></script>
+  <script src="/connected.js"></script>
   <script src="/concise.js"></script>
   <script src="/to-do.js"></script>
 </body>
