--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     body { width: 70%; margin: auto; margin-top: 3rem; }
     .column { float: left; margin: 0 5% 1rem 5%; }
     .width-6 { width: 40%; }
+    .width-7 { width: 52.5%; }
+    .width-8 { width: 65%; }
+    .width-9 { width: 77.5%; }
     .width-12 { width: 90%; }
     .centered { margin: auto; }
     .right { float: right; }
@@ -15,7 +18,7 @@
     ul { list-style-type: none; }
     form { width: 100%; }
     input { width: auto; }
-    input[type="text"] { width: 80%; }
+    input[type="text"] { width: 90%; }
     form input[type="text"] { width: 100%; }
     form input[type="submit"] { display: none; }
     button.delete-this { float: right; margin-top: 1px; }
