Add link to alt-style.js but commented out.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     body { width: 70%; margin: auto; margin-top: 3rem; }
     .column { float: left; margin: 0 5% 1rem 5%; }
     .width-6 { width: 40%; }
+    .width-7 { width: 52.5%; }
+    .width-8 { width: 65%; }
+    .width-9 { width: 77.5%; }
     .width-12 { width: 90%; }
     .centered { margin: auto; }
     .right { float: right; }
@@ -40,6 +43,7 @@
   <script src="/node_modules/microevent/microevent.js"></script>
   <script src="/connected.js"></script>
   <script src="/concise.js"></script>
+  <!-- <script src="/alt-style.js"></script> -->
   <script src="/to-do.js"></script>
 </body>
 </html>
