Add a registration form which validates the input upon input.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .left { float: left; }
     ul { list-style-type: none; }
     form { width: 100%; }
-    input { width: auto; }
+    input { width: 100%; }
     input[type="text"] { width: 80%; }
     form input[type="text"] { width: 100%; }
     form input[type="submit"] { display: none; }
@@ -44,6 +44,7 @@
   <script src="/connected.js"></script>
   <script src="/concise.js"></script>
   <!-- <script src="/alt-style.js"></script> -->
-  <script src="/to-do.js"></script>
+  <!-- <script src="/to-do.js"></script> -->
+  <script src="/signup-form.js"></script>
 </body>
 </html>
