Add sensible view element creation.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </style>
 </head>
 <body>
-  <section id='view'>
-  </section>
+
+  <!-- ConciseJS inserts the view element before the first child of the body tag. -->
 
   <script src="/node_modules/microevent/microevent.js"></script>
   <script src="/connected.js"></script>
