Make routing work.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     form input[type="submit"] { display: none; }
     button.delete-this { float: right; margin-top: 1px; }
     button { padding: 0px 3px 3px 3px; }
-
     textarea { width: 100%; height: 10rem; }
     #gets-rendered-here {
       font-family: monospace;
@@ -40,11 +39,11 @@
 
   <!-- ConciseJS inserts the view element before the first child of the body tag. -->
 
-  <script src="/node_modules/microevent/microevent.js"></script>
-  <script src="/connected.js"></script>
-  <script src="/concise.js"></script>
+  <!-- <script src="/node_modules/microevent/microevent.js"></script> -->
+  <!-- <script src="/connected.js"></script> -->
+  <!-- <script src="/concise.js"></script> -->
   <!-- <script src="/alt-style.js"></script> -->
   <!-- <script src="/to-do.js"></script> -->
-  <script src="/signup-form.js"></script>
+  <script src="/app/scripts/bundle.js"></script>
 </body>
 </html>
