--- a/index.html
+++ b/index.html
@@ -2,48 +2,10 @@
 <html>
 <head>
   <title>To Do App</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html { width: 100%; }
-    body { width: 70%; margin: auto; margin-top: 3rem; }
-    .column { float: left; margin: 0 5% 1rem 5%; }
-    .width-6 { width: 40%; }
-    .width-7 { width: 52.5%; }
-    .width-8 { width: 65%; }
-    .width-9 { width: 77.5%; }
-    .width-12 { width: 90%; }
-    .centered { margin: auto; }
-    .right { float: right; }
-    .left { float: left; }
-    ul { list-style-type: none; }
-    form { width: 100%; }
-    input { width: 100%; }
-    input[type="text"] { width: 80%; }
-    form input[type="text"] { width: 100%; }
-    form input[type="submit"] { display: none; }
-    button.delete-this { float: right; margin-top: 1px; }
-    button { padding: 0px 3px 3px 3px; }
-    textarea { width: 100%; height: 10rem; }
-    #gets-rendered-here {
-      font-family: monospace;
-    }
-    #gets-rendered-here div {
-      border: 1px solid #ccc;
-      display: table;
-      width: auto;
-      padding: 0.1rem 0.3rem 0.1rem 0.3rem;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="/app/styles/main.css"></style>
 </head>
 <body>
-
   <!-- ConciseJS inserts the view element before the first child of the body tag. -->
-
-  <!-- <script src="/node_modules/microevent/microevent.js"></script> -->
-  <!-- <script src="/connected.js"></script> -->
-  <!-- <script src="/concise.js"></script> -->
-  <!-- <script src="/alt-style.js"></script> -->
-  <!-- <script src="/to-do.js"></script> -->
   <script src="/app/scripts/bundle.js"></script>
 </body>
 </html>
