--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Demo App</title>
-  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body>
   <!-- ConciseJS inserts the view element before the first child of the body tag. -->
