Make app work without using routing.

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Demo App</title>
-  <link rel="stylesheet" type="text/css" href="/styles/main.css">
+	<title>Demo App</title>
+	<link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body>
-  <!-- ConciseJS inserts the view element before the first child of the body tag. -->
-  <script src="/scripts/bundle.js"></script>
+	<div id="concise-app"></div>
+	<!-- ConciseJS inserts the view element before the first child of the body tag. -->
+	<script src="/scripts/concise.js"></script>
 </body>
 </html>
